# BookShelf

./: .gitignore  pyproject.toml
bookshelf/: __init__.py
bookshelf/model/: __init__.py  association.py  base.py  book.py  creator.py  event.py  isbn.py  publisher.py
sandbox/: base.html  register_book.html  register_old.html  test.html
